--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "axios": "^0.21.1"
+    "@bluzelle/sdk-js": "^1.1.5",
+    "axios": "^0.21.1",
+    "dotenv": "^8.6.0"
   }
 }
