--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@bluzelle/sdk-js": "^1.1.5",
+    "@truffle/hdwallet-provider": "^1.4.2",
     "axios": "^0.21.1",
     "dotenv": "^8.6.0"
   }
