--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@bluzelle/sdk-js": "^1.1.5",
     "@truffle/hdwallet-provider": "^1.4.2",
     "axios": "^0.21.1",
-    "dotenv": "^8.6.0"
+    "dotenv": "^8.6.0",
+    "web3": "^1.5.0"
   }
 }
